--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -1,39 +1,44 @@
-- name: Check SQL Server Health & Utilization
-  hosts: 10.112.0.10 
+---
+- name: Check MS SQL Server Health
+  hosts: 10.112.0.10
   gather_facts: no
   tasks:
 
-    - name: Check Database Space Utilization
+    - name: Get Database Space Utilization
       win_shell: |
-        $query = "
+        Invoke-Sqlcmd -Query "
         SELECT DB_NAME(database_id) AS DatabaseName,
-               SUM(size * 8 / 1024) AS SizeMB
+               (size * 8) / 1024 AS SizeMB
         FROM sys.master_files
-        GROUP BY database_id;"
-        Invoke-Sqlcmd -Query $query -ServerInstance "20.102.105.60" -Database "master"
+        WHERE type = 0;" -ServerInstance "{{ sql_instance }}"
       register: db_space
-    - debug: var=db_space.stdout_lines
 
-    - name: Check Database Health
+    - name: Get Database Health
       win_shell: |
-        Invoke-Sqlcmd -Query "DBCC CHECKDB WITH NO_INFOMSGS;" -ServerInstance "20.102.105.60" -Database "master"
+        Invoke-Sqlcmd -Query "
+        SELECT name, state_desc, recovery_model_desc 
+        FROM sys.databases;" -ServerInstance "{{ sql_instance }}"
       register: db_health
-    - debug: var=db_health.stdout_lines
 
-    - name: Check Deadlocks
+    - name: Check for Deadlocks
       win_shell: |
-        $query = "SELECT COUNT(*) AS DeadlockCount FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
-        Invoke-Sqlcmd -Query $query -ServerInstance "20.102.105.60" -Database "master"
+        Invoke-Sqlcmd -Query "
+        SELECT COUNT(*) AS Deadlocks
+        FROM sys.dm_tran_locks
+        WHERE request_status = 'WAIT';" -ServerInstance "{{ sql_instance }}"
       register: deadlocks
-    - debug: var=deadlocks.stdout_lines
 
-    - name: Check SQL Job Activities
+    - name: Get SQL Agent Job Activities
       win_shell: |
-        $query = "
-        SELECT job.name, job.enabled, activity.run_requested_date, activity.stop_execution_date, activity.run_outcome
-        FROM msdb.dbo.sysjobs AS job
-        LEFT JOIN msdb.dbo.sysjobactivity AS activity ON job.job_id = activity.job_id
-        WHERE activity.run_requested_date IS NOT NULL;"
-        Invoke-Sqlcmd -Query $query -ServerInstance "20.102.105.60" -Database "msdb"
+        Invoke-Sqlcmd -Query "
+        SELECT job_id, name, last_run_outcome, enabled 
+        FROM msdb.dbo.sysjobs;" -ServerInstance "{{ sql_instance }}"
       register: job_activities
-    - debug: var=job_activities.stdout_lines
+
+    - name: Display Results
+      debug:
+        msg:
+          - "Database Space Utilization: {{ db_space.stdout }}"
+          - "Database Health: {{ db_health.stdout }}"
+          - "Deadlocks: {{ deadlocks.stdout }}"
+          - "SQL Agent Job Activities: {{ job_activities.stdout }}"
