--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -2,8 +2,9 @@
 - name: Check MS SQL Server Health
   hosts: 10.112.0.10
   gather_facts: no
+  vars:
+    sql_instance: "10.112.0.10"  # Define the SQL Server instance here
   tasks:
-
     - name: Get Database Space Utilization
       win_shell: |
         Invoke-Sqlcmd -Query "
