--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -3,7 +3,9 @@
   hosts: 10.112.0.10
   gather_facts: no
   vars:
-    sql_instance: "10.112.0.10"  # Define the SQL Server instance here
+    sql_instance: "10.112.0.10"
+    sql_user: "your_sql_username"  # Replace with your SQL Server username
+    sql_password: "your_sql_password"  # Replace with your SQL Server password
   tasks:
     - name: Get Database Space Utilization
       win_shell: |
@@ -11,14 +13,14 @@
         SELECT DB_NAME(database_id) AS DatabaseName,
                (size * 8) / 1024 AS SizeMB
         FROM sys.master_files
-        WHERE type = 0;" -ServerInstance "{{ sql_instance }}"
+        WHERE type = 0;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: db_space
 
     - name: Get Database Health
       win_shell: |
         Invoke-Sqlcmd -Query "
         SELECT name, state_desc, recovery_model_desc 
-        FROM sys.databases;" -ServerInstance "{{ sql_instance }}"
+        FROM sys.databases;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: db_health
 
     - name: Check for Deadlocks
@@ -26,14 +28,14 @@
         Invoke-Sqlcmd -Query "
         SELECT COUNT(*) AS Deadlocks
         FROM sys.dm_tran_locks
-        WHERE request_status = 'WAIT';" -ServerInstance "{{ sql_instance }}"
+        WHERE request_status = 'WAIT';" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: deadlocks
 
     - name: Get SQL Agent Job Activities
       win_shell: |
         Invoke-Sqlcmd -Query "
         SELECT job_id, name, last_run_outcome, enabled 
-        FROM msdb.dbo.sysjobs;" -ServerInstance "{{ sql_instance }}"
+        FROM msdb.dbo.sysjobs;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: job_activities
 
     - name: Display Results
