--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -4,8 +4,8 @@
   gather_facts: no
   vars:
     sql_instance: "10.112.0.10"
-    sql_user: "your_sql_username"  # Replace with your SQL Server username
-    sql_password: "your_sql_password"  # Replace with your SQL Server password
+    sql_user: "rajusql"  # Replace with your SQL Server username
+    sql_password: "Raju@2002"  # Replace with your SQL Server password
   tasks:
     - name: Get Database Space Utilization
       win_shell: |
