--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -4,39 +4,44 @@
   gather_facts: no
   vars:
     sql_instance: "10.112.0.10"
-    sql_user: "rajusql"  # Replace with your SQL Server username
-    sql_password: "Raju@2002"  # Replace with your SQL Server password
+    sql_user: "rajusql"
+    sql_password: "Raju@2002"
+
   tasks:
     - name: Get Database Space Utilization
-      win_shell: |
-        Invoke-Sqlcmd -Query "
-        SELECT DB_NAME(database_id) AS DatabaseName,
-               (size * 8) / 1024 AS SizeMB
-        FROM sys.master_files
-        WHERE type = 0;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
+      win_command: |
+        powershell -Command "Invoke-Sqlcmd -Query \"
+        SELECT DB_NAME(database_id) AS DatabaseName, 
+               (size * 8) / 1024 AS SizeMB 
+        FROM sys.master_files 
+        WHERE type = 0;\" -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes"
       register: db_space
+      ignore_errors: yes
 
     - name: Get Database Health
-      win_shell: |
-        Invoke-Sqlcmd -Query "
+      win_command: |
+        powershell -Command "Invoke-Sqlcmd -Query \"
         SELECT name, state_desc, recovery_model_desc 
-        FROM sys.databases;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
+        FROM sys.databases;\" -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes"
       register: db_health
+      ignore_errors: yes
 
     - name: Check for Deadlocks
-      win_shell: |
-        Invoke-Sqlcmd -Query "
-        SELECT COUNT(*) AS Deadlocks
-        FROM sys.dm_tran_locks
-        WHERE request_status = 'WAIT';" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
+      win_command: |
+        powershell -Command "Invoke-Sqlcmd -Query \"
+        SELECT COUNT(*) AS Deadlocks 
+        FROM sys.dm_tran_locks 
+        WHERE request_status = 'WAIT';\" -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes"
       register: deadlocks
+      ignore_errors: yes
 
     - name: Get SQL Agent Job Activities
-      win_shell: |
-        Invoke-Sqlcmd -Query "
+      win_command: |
+        powershell -Command "Invoke-Sqlcmd -Query \"
         SELECT job_id, name, last_run_outcome, enabled 
-        FROM msdb.dbo.sysjobs;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
+        FROM msdb.dbo.sysjobs;\" -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes"
       register: job_activities
+      ignore_errors: yes
 
     - name: Display Results
       debug:
