--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -3,7 +3,7 @@
   hosts: all
   gather_facts: no
   vars:
-    sql_instance: "10.112.0.10"
+    sql_instance: all
     sql_user: "rajusql"
     sql_password: "Raju@2002"
 
