--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -8,11 +8,21 @@
     sql_password: "Raju@2002"
 
   tasks:
+    - name: Verify PowerShell and Invoke-Sqlcmd Availability
+      win_shell: "Get-Command Invoke-Sqlcmd"
+      register: sqlcmd_check
+      ignore_errors: no
+
+    - name: Debug PowerShell SQLCmd Availability
+      debug:
+        var: sqlcmd_check.stdout
+
     - name: Get Database Space Utilization
       win_shell: |
         try {
           $query = "SELECT DB_NAME(database_id) AS DatabaseName, (size * 8) / 1024 AS SizeMB FROM sys.master_files WHERE type = 0;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json -Compress
+          if (-not $result) { Write-Output "No data returned" } else { $result }
         } catch {
           Write-Output "Error: $_"
         }
@@ -23,7 +33,8 @@
       win_shell: |
         try {
           $query = "SELECT name, state_desc, recovery_model_desc FROM sys.databases;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json -Compress
+          if (-not $result) { Write-Output "No data returned" } else { $result }
         } catch {
           Write-Output "Error: $_"
         }
@@ -34,7 +45,8 @@
       win_shell: |
         try {
           $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json -Compress
+          if (-not $result) { Write-Output "No data returned" } else { $result }
         } catch {
           Write-Output "Error: $_"
         }
@@ -45,7 +57,8 @@
       win_shell: |
         try {
           $query = "SELECT job_id, name, last_run_outcome, enabled FROM msdb.dbo.sysjobs;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json -Compress
+          if (-not $result) { Write-Output "No data returned" } else { $result }
         } catch {
           Write-Output "Error: $_"
         }
