--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -1,87 +1,61 @@
 ---
-- name: MS SQL Server Monitoring
+- name: Check MS SQL Server Health
   hosts: all
   gather_facts: no
   vars:
-    sql_server: "20.102.105.60"
-    sql_database: "master"
-    sql_username: "rajusql"
+    sql_instance: "20.102.105.60"
+    sql_user: "rajusql"
     sql_password: "Raju@2002"
 
   tasks:
-    - name: Enable and Configure WinRM
+    - name: Get Database Space Utilization
       win_shell: |
-        winrm quickconfig -q
-        Set-Service -Name WinRM -StartupType Automatic
-        Start-Service -Name WinRM
-        New-NetFirewallRule -Name "WinRM_HTTPS" -DisplayName "WinRM over HTTPS" -Enabled True -Direction Inbound -Protocol TCP -Action Allow -LocalPort 5986
-      register: winrm_config
+        try {
+          $query = "SELECT DB_NAME(database_id) AS DatabaseName, (size * 8) / 1024 AS SizeMB FROM sys.master_files WHERE type = 0;"
+          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+        } catch {
+          Write-Output "Error: $_"
+        }
+      register: db_space
+      ignore_errors: yes
 
-    - name: Display WinRM Configuration Output
-      debug:
-        msg: "{{ winrm_config.stdout_lines }}"
-
-    - name: Check Database Space Utilization
+    - name: Get Database Health
       win_shell: |
-        $query = @"
-        SELECT DB_NAME(database_id) AS DatabaseName, SUM(size * 8) / 1024 AS TotalSizeMB
-        FROM sys.master_files GROUP BY database_id;
-        "@
-        Invoke-Sqlcmd -Query $query -ServerInstance "{{ sql_server }}" -Username "{{ sql_username }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
-      register: db_space_output
-
-    - name: Display Database Space Utilization
-      debug:
-        msg: "{{ db_space_output.stdout_lines }}"
+        try {
+          $query = "SELECT name, state_desc, recovery_model_desc FROM sys.databases;"
+          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+        } catch {
+          Write-Output "Error: $_"
+        }
+      register: db_health
+      ignore_errors: yes
 
     - name: Check for Deadlocks
       win_shell: |
-        $query = "SELECT * FROM sys.dm_tran_locks WHERE request_status = 'WAIT'"
-        Invoke-Sqlcmd -Query $query -ServerInstance "{{ sql_server }}" -Username "{{ sql_username }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
-      register: deadlocks_output
+        try {
+          $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
+          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+        } catch {
+          Write-Output "Error: $_"
+        }
+      register: deadlocks
+      ignore_errors: yes
 
-    - name: Display Deadlocks
-      debug:
-        msg: "{{ deadlocks_output.stdout_lines }}"
-
-    - name: Check SQL Server Agent Job Activities
+    - name: Get SQL Agent Job Activities
       win_shell: |
-        $query = @"
-        SELECT j.job_id, j.name, j.enabled, MAX(h.run_status) AS last_run_status
-        FROM msdb.dbo.sysjobs j
-        LEFT JOIN msdb.dbo.sysjobhistory h ON j.job_id = h.job_id
-        WHERE h.step_id = 0
-        GROUP BY j.job_id, j.name, j.enabled;
-        "@
-        Invoke-Sqlcmd -Query $query -ServerInstance "{{ sql_server }}" -Username "{{ sql_username }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
-      register: job_activities_output
+        try {
+          $query = "SELECT job_id, name, last_run_outcome, enabled FROM msdb.dbo.sysjobs;"
+          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
+        } catch {
+          Write-Output "Error: $_"
+        }
+      register: job_activities
+      ignore_errors: yes
 
-    - name: Display Job Activities
+    - name: Display Results
       debug:
-        msg: "{{ job_activities_output.stdout_lines }}"
-
-    - name: Execute Remote SQL Command via WinRM
-      win_shell: |
-        sqlcmd -S {{ sql_server }} -U {{ sql_username }} -P {{ sql_password }} -Q "SELECT @@VERSION"
-      register: sql_version_output
-
-    - name: Display SQL Server Version
-      debug:
-        msg: "{{ sql_version_output.stdout_lines }}"
-
-    - name: Check Database Health
-      win_shell: |
-        $query = @"
-        SELECT name AS DatabaseName, state_desc AS Status,
-        (SELECT COUNT(*) FROM sys.dm_exec_requests) AS ActiveRequests,
-        (SELECT COUNT(*) FROM sys.dm_exec_sessions WHERE is_user_process = 1) AS ActiveUserConnections,
-        (SELECT COUNT(*) FROM sys.dm_os_waiting_tasks) AS PendingRequests,
-        (SELECT COUNT(*) FROM sys.dm_os_performance_counters WHERE counter_name = 'Processor Queue Length') AS CPUQueueLength
-        FROM sys.databases;
-        "@
-        Invoke-Sqlcmd -Query $query -ServerInstance "{{ sql_server }}" -Username "{{ sql_username }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
-      register: db_health_output
-
-    - name: Display Database Health
-      debug:
-        msg: "{{ db_health_output.stdout_lines }}"
+        msg:
+          - "Database Space Utilization: {{ db_space.stdout | default('No output') }}"
+          - "Database Health: {{ db_health.stdout | default('No output') }}"
+          - "Deadlocks: {{ deadlocks.stdout | default('No output') }}"
+          - "SQL Agent Job Activities: {{ job_activities.stdout | default('No output') }}"
