--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -1,61 +1,47 @@
 ---
 - name: Check MS SQL Server Health
-  hosts: all
+  hosts: 10.112.0.10
   gather_facts: no
   vars:
-    sql_instance: "20.102.105.60"
-    sql_user: "rajusql"
-    sql_password: "Raju@2002"
-
+    sql_instance: "10.112.0.10"
+    sql_user: "rajusql"  # Replace with your SQL Server username
+    sql_password: "Raju@2002"  # Replace with your SQL Server password
   tasks:
     - name: Get Database Space Utilization
       win_shell: |
-        try {
-          $query = "SELECT DB_NAME(database_id) AS DatabaseName, (size * 8) / 1024 AS SizeMB FROM sys.master_files WHERE type = 0;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
-        } catch {
-          Write-Output "Error: $_"
-        }
+        Invoke-Sqlcmd -Query "
+        SELECT DB_NAME(database_id) AS DatabaseName,
+               (size * 8) / 1024 AS SizeMB
+        FROM sys.master_files
+        WHERE type = 0;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: db_space
-      ignore_errors: yes
-
+ 
     - name: Get Database Health
       win_shell: |
-        try {
-          $query = "SELECT name, state_desc, recovery_model_desc FROM sys.databases;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
-        } catch {
-          Write-Output "Error: $_"
-        }
+        Invoke-Sqlcmd -Query "
+        SELECT name, state_desc, recovery_model_desc 
+        FROM sys.databases;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: db_health
-      ignore_errors: yes
-
+ 
     - name: Check for Deadlocks
       win_shell: |
-        try {
-          $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
-        } catch {
-          Write-Output "Error: $_"
-        }
+        Invoke-Sqlcmd -Query "
+        SELECT COUNT(*) AS Deadlocks
+        FROM sys.dm_tran_locks
+        WHERE request_status = 'WAIT';" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: deadlocks
-      ignore_errors: yes
-
+ 
     - name: Get SQL Agent Job Activities
       win_shell: |
-        try {
-          $query = "SELECT job_id, name, last_run_outcome, enabled FROM msdb.dbo.sysjobs;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate Yes | ConvertTo-Json
-        } catch {
-          Write-Output "Error: $_"
-        }
+        Invoke-Sqlcmd -Query "
+        SELECT job_id, name, last_run_outcome, enabled 
+        FROM msdb.dbo.sysjobs;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: job_activities
-      ignore_errors: yes
-
+ 
     - name: Display Results
       debug:
         msg:
-          - "Database Space Utilization: {{ db_space.stdout | default('No output') }}"
-          - "Database Health: {{ db_health.stdout | default('No output') }}"
-          - "Deadlocks: {{ deadlocks.stdout | default('No output') }}"
-          - "SQL Agent Job Activities: {{ job_activities.stdout | default('No output') }}"
+          - "Database Space Utilization: {{ db_space.stdout }}"
+          - "Database Health: {{ db_health.stdout }}"
+          - "Deadlocks: {{ deadlocks.stdout }}"
+          - "SQL Agent Job Activities: {{ job_activities.stdout }}"
