--- a/mssql_check.yml
+++ b/mssql_check.yml
@@ -14,7 +14,7 @@
         SELECT DB_NAME(database_id) AS DatabaseName,
                (size * 8) / 1024 AS SizeMB
         FROM sys.master_files
-        WHERE type = 0;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
+        WHERE type = 0;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" 
       register: db_space
       ignore_errors: yes
 
@@ -26,7 +26,7 @@
       win_shell: |
         Invoke-Sqlcmd -Query "
         SELECT name, state_desc, recovery_model_desc 
-        FROM sys.databases;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
+        FROM sys.databases;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" 
       register: db_health
       ignore_errors: yes
 
@@ -39,7 +39,7 @@
         Invoke-Sqlcmd -Query "
         SELECT COUNT(*) AS Deadlocks
         FROM sys.dm_tran_locks
-        WHERE request_status = 'WAIT';" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
+        WHERE request_status = 'WAIT';" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" 
       register: deadlocks
       ignore_errors: yes
 
@@ -51,7 +51,7 @@
       win_shell: |
         Invoke-Sqlcmd -Query "
         SELECT job_id, name, last_run_outcome, enabled 
-        FROM msdb.dbo.sysjobs;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate Yes
+        FROM msdb.dbo.sysjobs;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" 
       register: job_activities
       ignore_errors: yes
 
