--- a/JSON_Output.yml
+++ b/JSON_Output.yml
@@ -58,17 +58,8 @@
 
     - name: Display Results
       debug:
-        msg:
-          - "Database Space Utilization: {{ db_space.stdout | from_json | default('No output') }}"
-          - "Database Health: {{ db_health.stdout | from_json | default('No output') }}"
-          - "Deadlocks: {{ deadlocks.stdout | from_json | default('No output') }}"
-          - "SQL Agent Job Activities: {{ job_activities.stdout | from_json | default('No output') }}"
-
-    - name: Check if stdout is JSON and print
-      debug:
         msg: |
-          {% if db_space.stdout | from_json is defined %}
-            Valid JSON output for Database Space: {{ db_space.stdout | from_json }}
-          {% else %}
-            No valid JSON for Database Space.
-          {% endif %}
+          Database Space Utilization: {{ db_space.stdout | from_json | default('No output') }}
+          Database Health: {{ db_health.stdout | from_json | default('No output') }}
+          Deadlocks: {{ deadlocks.stdout | from_json | default('No output') }}
+          SQL Agent Job Activities: {{ job_activities.stdout | from_json | default('No output') }}
