--- a/JSON_Output.yml
+++ b/JSON_Output.yml
@@ -7,19 +7,18 @@
     sql_user: "rajusql"
     sql_password: "Raju@2002"
 
-  tasks:
-        - name: Get Database Space Utilization
+ tasks:
+    - name: Get Database Space Utilization
       win_shell: |
         try {
           $query = "SELECT DB_NAME(database_id) AS DatabaseName, (size * 8) / 1024 AS SizeMB FROM sys.master_files WHERE type = 0;"
           $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
           Write-Output $result
         } catch {
-          Write-Output "Error: $_"
+          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
         }
       register: db_space
       ignore_errors: yes
-
     - name: Display Database Space Utilization
       debug:
         msg: "{{ db_space.stdout | from_json }}"
