--- a/JSON_Output.yml
+++ b/JSON_Output.yml
@@ -7,7 +7,7 @@
     sql_user: "rajusql"
     sql_password: "Raju@2002"
 
- tasks:
+  tasks:
     - name: Get Database Space Utilization
       win_shell: |
         try {
@@ -19,6 +19,47 @@
         }
       register: db_space
       ignore_errors: yes
-    - name: Display Database Space Utilization
+
+    - name: Get Database Health
+      win_shell: |
+        try {
+          $query = "SELECT name, state_desc, recovery_model_desc FROM sys.databases;"
+          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
+          Write-Output $result
+        } catch {
+          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
+        }
+      register: db_health
+      ignore_errors: yes
+
+    - name: Check for Deadlocks
+      win_shell: |
+        try {
+          $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
+          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
+          Write-Output $result
+        } catch {
+          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
+        }
+      register: deadlocks
+      ignore_errors: yes
+
+    - name: Get SQL Agent Job Activities
+      win_shell: |
+        try {
+          $query = "SELECT job_id, name, last_run_outcome, enabled FROM msdb.dbo.sysjobs;"
+          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
+          Write-Output $result
+        } catch {
+          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
+        }
+      register: job_activities
+      ignore_errors: yes
+
+    - name: Display Results
       debug:
-        msg: "{{ db_space.stdout | from_json }}"
+        msg:
+          - "Database Space Utilization: {{ db_space.stdout | from_json | default('No output') }}"
+          - "Database Health: {{ db_health.stdout | from_json | default('No output') }}"
+          - "Deadlocks: {{ deadlocks.stdout | from_json | default('No output') }}"
+          - "SQL Agent Job Activities: {{ job_activities.stdout | from_json | default('No output') }}"
