--- a/JSON1.yml
+++ b/JSON1.yml
@@ -16,7 +16,7 @@
         WHERE type = 0;" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}"
       register: db_space
       ignore_errors: yes
-    
+
     - name: Get Database Health
       win_shell: |
         Invoke-Sqlcmd -Query "
@@ -43,16 +43,16 @@
 
     - name: Show Database Space Utilization
       debug:
-        msg: "{{ db_space.stdout }}"
+        msg: "{{ db_space.stdout_lines }}"
 
     - name: Show Database Health
       debug:
-        msg: "{{ db_health.stdout }}"
+        msg: "{{ db_health.stdout_lines }}"
 
     - name: Show Deadlocks Information
       debug:
-        msg: "{{ deadlocks.stdout }}"
+        msg: "{{ deadlocks.stdout_lines }}"
 
     - name: Show SQL Agent Job Activities
       debug:
-        msg: "{{ job_activities.stdout }}"
+        msg: "{{ job_activities.stdout_lines }}"
