--- a/JSON_Output.yml
+++ b/JSON_Output.yml
@@ -12,10 +12,10 @@
       win_shell: |
         try {
           $query = "SELECT DB_NAME(database_id) AS DatabaseName, (size * 8) / 1024 AS SizeMB FROM sys.master_files WHERE type = 0;"
-          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress
           Write-Output $result
         } catch {
-          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
+          Write-Output "{'Error': '$($_.Exception.Message)'}"
         }
       register: db_space
       ignore_errors: yes
@@ -24,10 +24,10 @@
       win_shell: |
         try {
           $query = "SELECT name, state_desc, recovery_model_desc FROM sys.databases;"
-          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress
           Write-Output $result
         } catch {
-          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
+          Write-Output "{'Error': '$($_.Exception.Message)'}"
         }
       register: db_health
       ignore_errors: yes
@@ -36,10 +36,10 @@
       win_shell: |
         try {
           $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
-          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress
           Write-Output $result
         } catch {
-          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
+          Write-Output "{'Error': '$($_.Exception.Message)'}"
         }
       register: deadlocks
       ignore_errors: yes
@@ -48,10 +48,10 @@
       win_shell: |
         try {
           $query = "SELECT job_id, name, last_run_outcome, enabled FROM msdb.dbo.sysjobs;"
-          $result = Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress
           Write-Output $result
         } catch {
-          Write-Output "{'error': '$_'}" | ConvertTo-Json -Compress
+          Write-Output "{'Error': '$($_.Exception.Message)'}"
         }
       register: job_activities
       ignore_errors: yes
@@ -59,7 +59,7 @@
     - name: Display Results
       debug:
         msg:
-          - "Database Space Utilization: {{ db_space.stdout | from_json | default('No output') }}"
-          - "Database Health: {{ db_health.stdout | from_json | default('No output') }}"
-          - "Deadlocks: {{ deadlocks.stdout | from_json | default('No output') }}"
-          - "SQL Agent Job Activities: {{ job_activities.stdout | from_json | default('No output') }}"
+          - "Database Space Utilization: {{ db_space.stdout | from_json | default({'Error': 'No output'}) }}"
+          - "Database Health: {{ db_health.stdout | from_json | default({'Error': 'No output'}) }}"
+          - "Deadlocks: {{ deadlocks.stdout | from_json | default({'Error': 'No output'}) }}"
+          - "SQL Agent Job Activities: {{ job_activities.stdout | from_json | default({'Error': 'No output'}) }}"
