--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -4,8 +4,8 @@
   gather_facts: no
   vars:
     sql_instance: "10.112.0.10"
-    sql_user: "rajusql"
-    sql_password: "Raju@2002"
+    sql_user: "{{username}}"
+    sql_password: "{{Password}}"
  
   tasks:
     - name: Get Database Space Utilization
